--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
+    "lib": [
+      "es2019"
+    ],
     "sourceMap": true,
     "outDir": "./build"
   },
